# syntax-fixer

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  shell.nix  test.js
src/: main.rs
vscode_extension/syntax-fixer/: CHANGELOG.md  README.md  package-lock.json  package.json
vscode_extension/syntax-fixer/src/: extension.ts
