[package]
name = "syntax-fixer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version="*", features = ["blocking", "json", "rustls-tls"], default-features=false}
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
axum = { version="*", features=["json", ] }
tokio = { version="*", features = ["rt", "macros"] }
rand = "*"
tempfile = "*"
tower-http = { version = "*", features = ["cors"] }
http = "*"